<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/wrapper"
    android:background="@color/colorBgAbout"
    tools:context="com.cst.scanner.FAboutUs">
    <RelativeLayout
        android:id="@+id/rlFabout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/rlFirst"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <ImageView
                android:background="@drawable/banner_aboutus"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <ImageView
                android:background="@drawable/cst_banner"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="60dp" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/llSecond"
            android:background="#454545"
            android:weightSum="4"
            android:layout_below="@+id/rlFirst"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <LinearLayout
                android:id="@+id/llScan"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:background="@drawable/print_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llFiles"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:background="@drawable/openfile"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llAbout"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <Button
                    android:background="@drawable/info"
                    android:layout_width="10dp"
                    android:layout_height="30dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llHelps"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:background="@drawable/huongdan"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:background="@color/colorBgAbout"

            android:id="@+id/rl1"
            android:gravity="center_vertical"
            android:layout_below="@id/llSecond"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:layout_marginLeft="20dp"
                android:id="@+id/imgIc"
                android:layout_alignParentLeft="true"
                android:background="@drawable/ic_map"
                android:layout_width="20dp"
                android:layout_height="30dp" />
            <TextView
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/imgIc"
                android:text="@string/diachi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/arrow_red"
                android:layout_width="10dp"
                android:layout_height="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:background="@color/colorBgAbout"
            android:id="@+id/rl2"
            android:gravity="center_vertical"
            android:layout_below="@id/rl1"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:layout_marginLeft="15dp"
                android:id="@+id/imgIc2"
                android:layout_alignParentLeft="true"
                android:background="@drawable/ic_gps"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:textAlignment="center"
                android:text="@string/muctieu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imgIc2"
                android:layout_toRightOf="@+id/imgIc2"
                android:layout_toEndOf="@+id/imgIc2"
                android:layout_marginStart="15dp" />
            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/arrow_red"
                android:layout_width="10dp"
                android:layout_height="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:background="@color/colorBgAbout"

            android:id="@+id/rl3"
            android:gravity="center_vertical"
            android:layout_below="@id/rl2"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:layout_marginLeft="20dp"
                android:id="@+id/imgIc3"
                android:layout_alignParentLeft="true"
                android:background="@drawable/like"
                android:layout_width="25dp"
                android:layout_height="25dp" />
            <TextView
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/imgIc3"
                android:text="@string/thich"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/arrow_red"
                android:layout_width="10dp"
                android:layout_height="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:background="@color/colorBgAbout"

            android:id="@+id/rl4"
            android:gravity="center_vertical"
            android:layout_below="@id/rl3"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:layout_marginLeft="20dp"
                android:id="@+id/imgIc4"
                android:layout_alignParentLeft="true"
                android:background="@drawable/cstsolution"
                android:layout_width="20dp"
                android:layout_height="30dp" />
            <TextView
                android:textColor="@color/colorWhite"

                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/imgIc4"
                android:text="@string/cst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView

                android:layout_marginTop="2dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/arrow_red"
                android:layout_width="10dp"
                android:layout_height="20dp" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
